.kube/webapp/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: front
spec:
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: ghcr.io/do3-2023/mmo-kube/webapp:v4
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            failureThreshold: 1
            periodSeconds: 3
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            failureThreshold: 3
            periodSeconds: 3
