.kube/webapp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: front
spec:
  selector:
    app: webapp
  ports:
    - name: http
      protocol: TCP
      targetPort: 8080
      port: 8080
  type: NodePort
